# rknn_demo

./: CMakeLists.txt  rknn_camera.c
common/: buffer.c  buffer.h  rknn_msg.c  rknn_msg.h  v4l2camera.c  v4l2camera.h  yuv.c
rknn/frg/: frg.c  frg.h
rknn/joint/: joint.c  joint.h
rknn/ssd/: ssd.c  ssd_post.c
rknn/ssd/ssd_1808/: ssd.c
rknn/ssd/ssd_3399pro/: ssd.c
ui/: ui_res.c
ui/ssd/: ssd_ui.c
